# b3

b3_bringup/: CMakeLists.txt  package.xml  setup.py
b3_bringup/config/: arduino_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  sensor.yaml  teleop.yaml
b3_bringup/launch/: base.bash  base.launch  freenect.launch  move_base.launch  move_base_rob.launch  nav.launch
b3_bringup/nodes/: arm_driver.py  sensor_driver.py
b3_bringup/params/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
phoenix_msgs/: CMakeLists.txt  package.xml  setup.py
phoenix_msgs/msg/: Ir_State.msg  Right_joint.msg
phoenix_msgs/srv/: Cmd.srv  Eyes.srv  Mouth.srv
ros_arduino_bridge/ros_arduino_python/config/: arduino_params.yaml
